Fix share-api-polyfill z-index

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -105,3 +105,9 @@ button.PaddedButton {
 #shareAPIPolyfill-container button {
   color: black;
 }
+#shareAPIPolyfill-backdrop {
+  z-index: 101;
+}
+#shareAPIPolyfill-container {
+  z-index: 102;
+}
